# Minecraft_cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  conanfile.py
client/: CMakeLists.txt
client/cmake/: InstallAssets.cmake
client/include/core/: ClientApplication.hpp
client/include/ecs/component/: CameraComponent.hpp  ComponentList.hpp
client/include/render/: BlockTextureMapper.hpp  ChunkMeshBuilder.hpp  ShaderProgram.hpp  TextureManager.hpp  Vertex.hpp
client/include/systems/: CameraSystem.hpp  IRenderableSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  UISystem.hpp
client/include/utils/: FpsStats.hpp
client/include/world/: SimpleChunkProvider.hpp
client/shaders/: voxel.vert
client/src/: main.cpp
client/src/core/: ClientApplication.cpp
client/src/render/: ChunkMeshBuilder.cpp  TextureManager.cpp
client/src/systems/: CameraSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  UISystem.cpp
client/src/world/: SimpleChunkProvider.cpp
cmake/: ConanSetup.cmake  Dependencies.cmake  InstallAssets.cmake  MagnumSetup.cmake
include/core/: Application.hpp  CrashReporter.hpp  Logger.hpp  Window.hpp
include/ecs/: ECS.hpp  Ecs.hpp  Entity.hpp  EntityManager.hpp
include/ecs/component/: CameraComponent.hpp  ComponentList.hpp  ComponentStorage.hpp  MeshComponent.hpp  PlayerComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp
include/ecs/events/: EventBus.hpp  Events.hpp
include/ecs/system/: CameraInputSystem.hpp  CameraSystem.hpp  ChunkLoadingSystem.hpp  CollisionSystem.hpp  GravitySystem.hpp  ISystem.hpp  JumpSystem.hpp  MovementSystem.hpp  PlayerInputSystem.hpp  RenderSystem.hpp  UISystem.hpp
include/input/: GLFWInputProvider.hpp  IInputProvider.hpp  InputManager.hpp
include/render/: BlockTextureMapper.hpp  Camera.hpp  ChunkMesh.hpp  ChunkMeshBuilder.hpp  IShader.hpp  Renderer.hpp  Shader.hpp  ShaderProgram.hpp  TextureAtlas.hpp  TextureManager.hpp  Vertex.hpp
include/utils/: FastDivFloor.hpp  FpsStats.hpp  IVec3Hasher.hpp  IVer3Hasher.hpp  PrioritizedChunk.hpp  PriorityUniqueQueue.hpp  UniqueQueue.hpp
include/world/: Block.hpp  Chunk.hpp  ChunkGenerator.hpp  ChunkSerializer.hpp  World.hpp
libs/glad/include/glad/: gl.h
server/: CMakeLists.txt
server/include/systems/: ChunkLoadingSystem.hpp  CollisionSystem.hpp  GravitySystem.hpp  JumpSystem.hpp  MovementSystem.hpp
server/include/world/: ChunkGenerator.hpp  ChunkSerializer.hpp  World.hpp
server/src/: main.cpp
server/src/systems/: ChunkLoadingSystem.cpp  CollisionSystem.cpp  GravitySystem.cpp  JumpSystem.cpp  MovementSystem.cpp
server/src/world/: ChunkGenerator.cpp  ChunkSerializer.cpp  World.cpp
shaders/: voxel.frag  voxel.vert
shared/: CMakeLists.txt
shared/include/core/: CrashReporter.hpp  Logger.hpp
shared/include/ecs/: Ecs.hpp  Entity.hpp
shared/include/ecs/component/: ColliderComponent.hpp  ComponentList.hpp  ComponentStorage.hpp  TransformComponent.hpp
shared/include/ecs/events/: EventBus.hpp  Events.hpp
shared/include/ecs/system/: ISystem.hpp
shared/include/utils/: IVec3Hasher.hpp  PrioritizedChunk.hpp  PriorityUniqueQueue.hpp
shared/include/world/: Block.hpp  Chunk.hpp  IChunkProvider.hpp
shared/src/: dummy.cpp
shared/src/world/: Chunk.cpp
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Logger.cpp  Window.cpp
src/ecs/system/: CameraInputSystem.cpp  CameraSystem.cpp  ChunkLoadingSystem.cpp  CollisionSystem.cpp  GravitySystem.cpp  JumpSystem.cpp  MovementSystem.cpp  PlayerInputSystem.cpp  RenderSystem.cpp  UISystem.cpp
src/render/: Camera.cpp  ChunkMesh.cpp  ChunkMeshBuilder.cpp  Renderer.cpp  Shader.cpp  ShaderProgram.cpp  TextureAtlas.cpp  TextureManager.cpp
src/world/: Chunk.cpp  ChunkGenerator.cpp  ChunkSerializer.cpp  World.cpp
test/: CMakeLists.txt  TestEventListener.hpp  global_vars.hpp  main.cpp
test/ecs/: TestECS.cpp
test/ecs/component/: TestComponentStorage.cpp
test/ecs/system/: TestCameraSystem.cpp  TestChunkLoadingSystem.cpp  TestRenderSystem.cpp
test/render/: TestChunkMesh.cpp  TestShader.cpp
test/utils/: wait_until.hpp
test/world/: TestChunk.cpp  TestChunkGenerator.cpp  TestWorld.cpp
